--- a/packages/ecommerce/payment_gateway_types/payment_gateway_payflow/locale/en/lang_strings.xml
+++ b/packages/ecommerce/payment_gateway_types/payment_gateway_payflow/locale/en/lang_strings.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_strings.xml,v 1.1.2.2 2013/04/11 02:08:11 cupreti Exp $
+* $Id: lang_strings.xml,v 1.1.2.3 2013/05/21 06:27:14 cupreti Exp $
 *
 */
 -->
@@ -18,7 +18,7 @@
 <strings>
 <string source="default_bodycopy_content"><![CDATA[
 %%processing_error%%
-<div style="background-color: #CCC; padding: 5px"><strong>$%%transaction_amount%%</strong>(%%transaction_gst%% percent GST)  dollors are about to be debited from your card</div>
+<div style="background-color: #CCC; padding: 5px"><strong>$%%transaction_amount%%</strong> (%%transaction_gst%% percent GST)  dollars are about to be debited from your card</div>
 <table cellpadding="5">
 	<tr>
 		<td align="right">Card Number</td>
@@ -33,7 +33,7 @@
 		<td>%%card_type%%</td>
 	</tr>
 	<tr>
-	`	<td>&nbsp;</td>
+		<td>&nbsp;</td>
 		<td>%%submit_button%% %%reset_button%% %%cancel_button%%</td>
 	</tr>
 </table>
