Bug #6338. If no file is selected when uploading the file, display the more appropriate 'no file selected' error message

--- a/core/locale/en/lang_errors.xml
+++ b/core/locale/en/lang_errors.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_errors.xml,v 1.146.2.1 2013/02/26 23:56:49 cupreti Exp $
+* $Id: lang_errors.xml,v 1.146.2.2 2013/05/28 05:08:27 cupreti Exp $
 *
 */
 
@@ -1502,7 +1502,7 @@ Full Node Contents %3$s</error>
 	<error code="CORE0053">Failed saving file "%s" to cache, failed updating lookups</error>
 	<error code="CORE0054">Failed saving web paths</error>
 	<error code="CORE0055">File upload failed, web path "%s" is already in use by another asset</error>
-	<error code="CORE0056">Failed updating web path. Path already exists?</error>
+	<error code="CORE0056">File upload failed. No file selected</error>
 	<error code="CORE0057">File upload failed. File size was too large. The maximum file size is %1$s but the uploaded file was %2$s</error>
 	<error code="CORE0058">File upload failed. Unable to create %s</error>
 	<error code="CORE0059">Login design failed setting public read permission for asset "%1$s" (#%2$s)</error>
