--- a/packages/web_services/api/data_source_soap/locale/en/lang_screen_details.xml
+++ b/packages/web_services/api/data_source_soap/locale/en/lang_screen_details.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: lang_screen_details.xml,v 1.3.2.1 2013/06/20 01:38:30 ewang Exp $
+* $Id: lang_screen_details.xml,v 1.3.2.2 2013/06/20 05:02:09 ewang Exp $
 *
 */
 -->
@@ -46,6 +46,10 @@
 		<field attribute="passphrase">
 			<display_name>Passphrase</display_name>
 			<note>Certificate file and passphrase for HTTPS client certificate authentication</note>
+		</field>
+		<field attribute="jsessionid_url">
+			<display_name>JSESSIONID Auth URL</display_name>
+			<note>Only used for Oracle CRM JSESSIONID authentication</note>
 		</field>
 		<field attribute="mute_exception">
 			<display_name>Mute Exceptions</display_name>
